--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,46 @@
  *= require_tree .
  *= require_self
  */
+
+/* main.css */
+
+html { font-size: 6.25%; }
+
+body {
+    font-family: Tahoma, Lucida, Calibri;
+    font-size: 16px;
+    color: #EEE;
+    /* background: #666;*/
+    background: darkgrey;
+
+}
+
+.wrapper {
+    width: 90%;
+    padding: 0 0 0 25px;
+    margin: 0 auto;
+    font-size: 0;
+    /*   background: #666; */
+    background: darkgrey;
+}
+
+.wrapper > * {
+    /* background: #888; */
+    background: #002F6C;
+    padding: 0;
+    margin: 0 25px 25px 0;
+    position: relative;
+    display: inline-block;
+    font-size: 16px;
+    overflow: hidden;
+    text-align: center;
+}
+
+.wrapper > * > * {
+
+}
+
+.title {
+    width:86%;
+    padding:20px;
+}
