DCMD-747Styling change to make it look like part of VA Heritage site

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -19,11 +19,15 @@
 html { font-size: 6.25%; }
 
 body {
-    font-family: Tahoma, Lucida, Calibri;
+ /*   font-family: Tahoma, Lucida, Calibri;
     font-size: 16px;
     color: #EEE;
-    /* background: #666;*/
-    background: darkgrey;
+    background: darkgrey; */
+
+    font:13px arial,helvetica,clean,sans-serif;
+    background-image: url("/assets/web_background.jpg");
+    font-size: small;
+   color: #333;
 
 }
 
@@ -32,12 +36,10 @@ body {
     padding: 0 0 0 25px;
     margin: 0 auto;
     font-size: 0;
-    /*   background: #666; */
-    background: darkgrey;
+
 }
 
 .wrapper > * {
-    /* background: #888; */
     background: #002F6C;
     padding: 0;
     margin: 0 25px 25px 0;
@@ -55,4 +57,111 @@ body {
 .title {
     width:86%;
     padding:20px;
+}
+
+a:link {
+   /* color:#003984;*/
+    color:deepskyblue;
+}
+a:visited {
+    color:#003984;
+    color:cornflowerblue;
+}
+.page_content {
+    border:10px solid #003984;
+    margin: 0 auto;
+    width:90%;
+    display:table;
+    background-color:white;
+    margin-left:auto;
+    margin-right:auto;
+}
+form {
+    display: inline;
+}
+.clear {
+    clear: both;
+}
+div.header {
+    border-bottom: 0;
+    margin: 0 auto;
+}
+div.header img {
+    border: 0;
+}
+div.header img.logo {
+    float: left;
+    height:100px;
+    padding:5px;
+}
+.menu_container {
+    background-color: #6699CC;
+    display:table;
+    width:100%;
+    margin:0px;
+    padding:0px;
+    list-style-type:none;
+    border-bottom:1px solid #003984;
+    border-top:1px solid #003984;
+}
+.menu {
+    width:100%;
+    margin:0px;
+    padding:0px;
+    list-style-type:none;
+}
+.tab>a{
+    text-transform:uppercase;
+    letter-spacing:1px;
+    font-size:90%;
+    text-decoration:none;
+    color:white;
+    font-weight:bold;
+}
+.tab-select>a {
+    text-transform:uppercase;
+    letter-spacing:1px;
+    font-size:90%;
+    text-decoration:none;
+    font-weight:bold;
+}
+.alt-tab>a{
+    text-transform:uppercase;
+    letter-spacing:1px;
+    font-size:70%;
+    text-decoration:none;
+    color:lightgray;
+    font-weight:bold;
+}
+.tab {
+    float:left;
+    width:10%;
+    text-align: center;
+    padding:5px;
+    border-right:1px solid #003984;
+    min-height: 3em;
+}
+.tab-select {
+    float:left;
+    width:10%;
+    text-align: center;
+    border-bottom: 0;
+    background-color:white;
+    padding:5px;
+    border-right:1px solid #003984;
+    min-height: 3em;
+}
+.alt-tab {
+    float:right;
+    width:10%;
+    text-align: center;
+    padding:5px;
+    border-bottom: 0;
+    border-left:1px solid #003984;
+    min-height: 3em;
+}
+
+div.form {
+    min-height:600px;
+    padding:10px;
 }
