--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,17 +1,30 @@
+<div class="page_content">
+  <div class="header">
+    <a href="http://vaheritage.org/">
+      <img src="http://ead.lib.virginia.edu/vivaead/logos/vhpban.jpg" alt="VIVA EAD Logo" class="logo" /></a>
+    <br class="clear" />
+  </div>
+  <div class="menu_container">
+    <ul class="menu">
+      <li class="tab-select"><a href="search?smode=simple">Log In</a></li>
+      <li class="tab"><a href="http://search.vaheritage.org/vivaxtf/search?smode=advanced">Advanced Search</a></li>
+      <li class="tab"><a href="http://search.vaheritage.org/vivaxtf/search?smode=browse&browse-all=yes">Browse</a></li>
+      <li class="alt-tab"><a href="http://www.vivalib.org/">about VIVA</a></li>
+      <li class="alt-tab"><a href="http://vaheritage.org/">Virginia Heritage</a></li>
+      <li class="alt-tab"><a href="/viva-upload/upload.jsp">admin upload</a></li>
+    </ul>
+  </div>
+  <div class="form">
 <h2>Edit <%= resource_name.to_s.humanize %></h2>
-
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-
     <div class="field">
       <%= f.label :email %><br />
       <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
     </div>
-
     <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
         <div>Currently waiting confirmation for: <%= resource.unconfirmed_email %></div>
     <% end %>
-
     <div>
       <%= f.label :Institution %><br />
       <%= f.select :Org, options_for_select([["Select One", ""],
@@ -55,7 +68,6 @@
                                             ]), :class =>'dropbox' %>
     </div>
 
-
     <div class="field">
       <%= f.label :password %> <i>(leave blank if you don't want to change it)</i><br />
       <%= f.password_field :password, autocomplete: "new-password" %>
@@ -64,24 +76,21 @@
           <em><%= @minimum_password_length %> characters minimum</em>
       <% end %>
     </div>
-
     <div class="field">
       <%= f.label :password_confirmation %><br />
       <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
     </div>
-
     <div class="field">
       <%= f.label :current_password %> <i>(we need your current password to confirm your changes)</i><br />
       <%= f.password_field :current_password, autocomplete: "current-password" %>
     </div>
-
     <div class="actions">
       <%= f.submit "Update" %>
     </div>
 <% end %>
-
 <h3>Cancel my account</h3>
-
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
 <%= link_to "Back", :back %>
+
+</div>
+</div>
