--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,20 @@
+<div class="page_content">
+  <div class="header">
+    <a href="http://vaheritage.org/">
+      <img src="http://ead.lib.virginia.edu/vivaead/logos/vhpban.jpg" alt="VIVA EAD Logo" class="logo" /></a>
+    <br class="clear" />
+  </div>
+  <div class="menu_container">
+    <ul class="menu">
+      <li class="tab-select"><a href="search?smode=simple">Log In</a></li>
+      <li class="tab"><a href="http://search.vaheritage.org/vivaxtf/search?smode=advanced">Advanced Search</a></li>
+      <li class="tab"><a href="http://search.vaheritage.org/vivaxtf/search?smode=browse&browse-all=yes">Browse</a></li>
+      <li class="alt-tab"><a href="http://www.vivalib.org/">about VIVA</a></li>
+      <li class="alt-tab"><a href="http://vaheritage.org/">Virginia Heritage</a></li>
+      <li class="alt-tab"><a href="/viva-upload/upload.jsp">admin upload</a></li>
+    </ul>
+  </div>
+  <div class="form">
 <h2>Sign up</h2>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
@@ -70,3 +87,5 @@
 <% end %>
 
 <%= render "devise/shared/links" %>
+  </div>
+</div>
