--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -29,42 +29,48 @@
       <%= f.label :Institution %><br />
       <%= f.select :Org, options_for_select([["Select One", ""],
                                              ["Alexandria Library",1],
-                                             ["Bridgewater College",2],
-                                             ["College of William and Mary",3],
-                                             ["Colonial Williamsburg",4],
-                                             ["Fairfax County Public Library",5],
-                                             ["George Mason University",6],
-                                             ["Gunston Hall Library & Archives",7],
-                                             ["Handley Regional Library",8],
-                                             ["Hollins University",9],
-                                             ["James Madison University",10],
-                                             ["Library of Virgina",11],
-                                             ["Longwood University",12],
-                                             ["Montgomery County Circuit Court",13],
-                                             ["Old Dominion University",14],
-                                             ["Roanoke Public Libraries",15],
-                                             ["Radford University",16],
-                                             ["Randolph-Macon College",17],
-                                             ["Shenandoah County Library",18],
-                                             ["Thomas Balch Library",19],
-                                             ["University of Mary Washington",20],
-                                             ["University of Richmond",21],
-                                             ["University of Virginia, Health Sciences Library",22],
-                                             ["University of Virginia, Law Library",23],
-                                             ["University of Virginia, Music Library",24],
-                                             ["University of Virginia, Special Collections",25],
-                                             ["Virginia Commonwealth University, James Cabell Library",26],
-                                             ["Virginia Commonwealth University, Tompkins-McCaw Library",27],
-                                             ["Virginia Historical Society",28],
-                                             ["Virginia Military Institute",29],
-                                             ["Virginia Museum of Fine Arts",30],
-                                             ["Virginia Polytechnic Institute and State University",31],
-                                             ["Virginia State Law Library, Supreme Court of Virginia",32],
-                                             ["Virginia State University",33],
-                                             ["Virginia Union University",34],
-                                             ["Washington and Lee University, Law School",35],
-                                             ["Washington and Lee University, Leyburn Library",36],
-                                             ["Wytheville Community College",37]
+                                             ["Averett University",2],
+                                             ["Bridgewater College",3],
+                                             ["College of William and Mary",4],
+                                             ["Colonial Williamsburg",5],
+                                             ["Fairfax County Public Library",6],
+                                             ["George Mason University",7],
+                                             ["Gunston Hall Library & Archives",8],
+                                             ["Handley Regional Library",9],
+                                             ["Hollins University",10],
+                                             ["James Madison University",11],
+                                             ["Library of Virgina",12],
+                                             ["Longwood University",13],
+                                             ["Montgomery County Circuit Court",14],
+                                             ["Norfolk Public Library",15],
+                                             ["Old Dominion University",16],
+                                             ["Roanoke College",17],
+                                             ["Roanoke Public Libraries",18],
+                                             ["Radford University",19],
+                                             ["Randolph-Macon College",20],
+                                             ["Shenandoah County Library",21],
+                                             ["Thomas Balch Library",22],
+                                             ["University of Mary Washington",23],
+                                             ["University of Richmond",24],
+                                             ["University of Virginia, The Center for Nursing Historical Inquiry",25],
+                                             ["University of Virginia, Health Sciences Library",26],
+                                             ["University of Virginia, Law Library",27],
+                                             ["University of Virginia, Music Library",28],
+                                             ["University of Virginia, Special Collections",29],
+                                             ["Virginia Commonwealth University, James Cabell Library",30],
+                                             ["Virginia Commonwealth University, Tompkins-McCaw Library",31],
+                                             ["Virginia Historical Society",32],
+                                             ["Virginia Military Institute",33],
+                                             ["Virginia Museum of Fine Arts",34],
+                                             ["Virginia Polytechnic Institute and State University",35],
+                                             ["Virginia State Law Library, Supreme Court of Virginia",36],
+                                             ["Virginia State University",37],
+                                             ["Virginia Union University",38],
+                                             ["Washington and Lee University, Law School",39],
+                                             ["Washington and Lee University, Leyburn Library",40],
+                                             ["Woodrow Wilson Presidential Library & Museum",41],
+                                             ["Wytheville Community College",42],
+                                             ["Wythe County Historical Society",43]
                                             ]), :class =>'dropbox' %>
     </div>
 
