--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,9 +23,12 @@
         Logged in as <strong><%= current_user.email %></strong>.
         <%= hidden_field_tag :user_signed_in, user_signed_in?.inspect, :id => 'user_signed_in' %>
         <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+        <%if current_user.admin? %>
+          <%= link_to "Add Users", new_user_registration_path, :class => 'navbar-link'  %> |
+        <% end %>
         <%= link_to "Logout", destroy_user_session_path, method: :delete, :class => 'navbar-link'  %>
     <% else %>
-        <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
+        <%#= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %>
         <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
     <% end %>
   </p>
